ci-scripts/k8s/overlays/prod/patches/infra-scale-zero.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: face-infra
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: face-infra
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: face-infra
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: face-infra
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: face-infra
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: face-infra
spec:
  replicas: 0
